{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 0,
  "lineage": "324bbf7a-47b6-03e3-cbcc-779bfa6b78a2",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:425697928416:instance/i-04f20fa37aa292786",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-04f20fa37aa292786",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SALAHDIN",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-039a922964a4064cf",
            "private_dns": "ip-10-0-10-232.ec2.internal",
            "private_ip": "10.0.10.232",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0a7773dba57a37b60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fde46e90df25b131"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0df4fdfbd419294db",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fde46e90df25b131"
            ]
          },
          "dependencies": [
            "aws_security_group.salah-sec-group",
            "aws_subnet.privat1",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c02fb55956c7d316",
            "arn": "arn:aws:ec2:us-east-1:425697928416:instance/i-0a0974039c390e09f",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0a0974039c390e09f",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "SALAHDIN",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0cf0ea706cad3299c",
            "private_dns": "ip-10-0-20-199.ec2.internal",
            "private_ip": "10.0.20.199",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0b90e3473b0eb0fdf",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0fde46e90df25b131"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-099a2afb788c95d24",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0fde46e90df25b131"
            ]
          },
          "dependencies": [
            "aws_security_group.salah-sec-group",
            "aws_subnet.privat2",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "SALAHDIN_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:internet-gateway/igw-0a14b4be4849fe384",
            "id": "igw-0a14b4be4849fe384",
            "owner_id": "425697928416",
            "tags": {
              "Name": "SALAHDIN_vpc- Internet Gateway"
            },
            "tags_all": {
              "Name": "SALAHDIN_vpc- Internet Gateway"
            },
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "SALAHDIN_ELB",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:425697928416:loadbalancer/app/salahdinlb/ea060f40b346b26b",
            "arn_suffix": "app/salahdinlb/ea060f40b346b26b",
            "desync_mitigation_mode": "defensive",
            "dns_name": "salahdinlb-473484753.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:425697928416:loadbalancer/app/salahdinlb/ea060f40b346b26b",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "salahdinlb",
            "security_groups": [
              "sg-0039282089d5da436"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-08fd1792b0addd88d"
              },
              {
                "subnet_id": "subnet-0c935d99c84f7f8ff"
              }
            ],
            "subnets": [
              "subnet-08fd1792b0addd88d",
              "subnet-0c935d99c84f7f8ff"
            ],
            "vpc_id": "vpc-07638371a9b89e244",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "listener_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:425697928416:listener/app/salahdinlb/ea060f40b346b26b/60bb3bf132fb00e9",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:425697928416:targetgroup/salahdin/949fb4209ddd8b57",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:425697928416:listener/app/salahdinlb/ea060f40b346b26b/60bb3bf132fb00e9",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:425697928416:loadbalancer/app/salahdinlb/ea060f40b346b26b",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.SALAHDIN_ELB",
            "aws_lb_target_group.SALAHDIN_TARGET",
            "aws_subnet.public",
            "aws_subnet.public2",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "SALAHDIN_TARGET",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:425697928416:targetgroup/salahdin/949fb4209ddd8b57",
            "arn_suffix": "targetgroup/salahdin/949fb4209ddd8b57",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:425697928416:targetgroup/salahdin/949fb4209ddd8b57",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "salahdin",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TARGET_ATTACH1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:425697928416:targetgroup/salahdin/949fb4209ddd8b57-20220407225943896200000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:425697928416:targetgroup/salahdin/949fb4209ddd8b57",
            "target_id": "i-04f20fa37aa292786"
          },
          "dependencies": [
            "aws_instance.ec2-instance1",
            "aws_lb_target_group.SALAHDIN_TARGET",
            "aws_security_group.salah-sec-group",
            "aws_subnet.privat1",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "TARGET_ATTACH2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:425697928416:targetgroup/salahdin/949fb4209ddd8b57-20220407225943810900000001",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:425697928416:targetgroup/salahdin/949fb4209ddd8b57",
            "target_id": "i-0a0974039c390e09f"
          },
          "dependencies": [
            "aws_instance.ec2-instance2",
            "aws_lb_target_group.SALAHDIN_TARGET",
            "aws_security_group.salah-sec-group",
            "aws_subnet.privat2",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "SALAHDIN_route_table_privat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:route-table/rtb-0ca1b404e4cd3a75f",
            "id": "rtb-0ca1b404e4cd3a75f",
            "owner_id": "425697928416",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "Public Subnet Route Table."
            },
            "tags_all": {
              "Name": "Public Subnet Route Table."
            },
            "timeouts": null,
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "SALAHDIN_route_table_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:route-table/rtb-0a70177d749f2df2b",
            "id": "rtb-0a70177d749f2df2b",
            "owner_id": "425697928416",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0a14b4be4849fe384",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Public Subnet Route Table."
            },
            "tags_all": {
              "Name": "Public Subnet Route Table."
            },
            "timeouts": null,
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.SALAHDIN_igw",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SALAHDIN_vpc_us_east_1a_privat1_aso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08418e63ae8cae66a",
            "route_table_id": "rtb-0ca1b404e4cd3a75f",
            "subnet_id": "subnet-0df4fdfbd419294db"
          },
          "dependencies": [
            "aws_route_table.SALAHDIN_route_table_privat",
            "aws_subnet.privat1",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SALAHDIN_vpc_us_east_1a_privat2_aso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06bbe8976f1289996",
            "route_table_id": "rtb-0ca1b404e4cd3a75f",
            "subnet_id": "subnet-099a2afb788c95d24"
          },
          "dependencies": [
            "aws_route_table.SALAHDIN_route_table_privat",
            "aws_subnet.privat2",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "SALAHDIN_vpc_us_east_1a_public_aso",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c581dbe4ef82cbc1",
            "route_table_id": "rtb-0a70177d749f2df2b",
            "subnet_id": "subnet-0c935d99c84f7f8ff"
          },
          "dependencies": [
            "aws_internet_gateway.SALAHDIN_igw",
            "aws_route_table.SALAHDIN_route_table_public",
            "aws_subnet.public",
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "salah-sec-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:security-group/sg-0fde46e90df25b131",
            "description": "Allow tls inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1000
              }
            ],
            "id": "sg-0fde46e90df25b131",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "inbound rules from VPC",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 1000
              }
            ],
            "name": "salah-sec-group",
            "name_prefix": "",
            "owner_id": "425697928416",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "aws_security_group",
              "instance_name": "aws_instance"
            },
            "tags_all": {
              "Name": "aws_security_group",
              "instance_name": "aws_instance"
            },
            "timeouts": null,
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:subnet/subnet-0df4fdfbd419294db",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0df4fdfbd419294db",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425697928416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat Subnet 1"
            },
            "tags_all": {
              "Name": "privat Subnet 1"
            },
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privat2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:subnet/subnet-099a2afb788c95d24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-099a2afb788c95d24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425697928416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "privat Subnet 1"
            },
            "tags_all": {
              "Name": "privat Subnet 1"
            },
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:subnet/subnet-0c935d99c84f7f8ff",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c935d99c84f7f8ff",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425697928416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:subnet/subnet-08fd1792b0addd88d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.30.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08fd1792b0addd88d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "425697928416",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Public Subnet"
            },
            "tags_all": {
              "Name": "Public Subnet"
            },
            "vpc_id": "vpc-07638371a9b89e244"
          },
          "dependencies": [
            "aws_vpc.SALAHDIN_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "SALAHDIN_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:425697928416:vpc/vpc-07638371a9b89e244",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-03091afe0b141f63b",
            "default_route_table_id": "rtb-0cf0357ff0ec4ebac",
            "default_security_group_id": "sg-0039282089d5da436",
            "dhcp_options_id": "dopt-0c2e9650bb624027b",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-07638371a9b89e244",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0cf0357ff0ec4ebac",
            "owner_id": "425697928416",
            "tags": {
              "Name": "salahdin_vpc"
            },
            "tags_all": {
              "Name": "salahdin_vpc"
            }
          }
        }
      ]
    }
  ]
}